# PRCut

./: README.md  extract_solo_representation.py  extract_vit_representation.py  pyproject.toml  run_prcut.py  run_turtle.py
configs/: dino.yaml  prcut.yaml  solo.yaml  solo_cifar100.yaml
prcut/: constructors.py  controller.py
prcut/configs/: __init__.py  base.py  dataset.py  experiment.py  inference.py  trainer.py
prcut/data/: data_utils.py  datasets.py  solo_checkpoints.py
prcut/kernels/: types.py
prcut/losses/: contrastive.py  prcut.py  turtle.py  vae.py
prcut/models/: cifar_resnet.py  layers.py  prcut.py  resnet.py  simclr.py
prcut/training/: augmentations.py  optimizers.py
prcut/training/methods/: base.py  prcut.py  simclr.py  turtle.py
prcut/utils/: functional.py  similarities.py
